# universal-eduplatform

./: .gitignore  LICENSE.md  README.md  requirements.txt
.github/: BUG_ISSUE.md  CONTRIBUTING.md  FEATURE_ISSUE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: DEV.yml  black.yml  main.yml  test.yml
QuizPlatform/: settings.py  urls.py
ai-module/: docker-compose.yml
ai-module/app/: __main__.py  config.py
analytics/: Dockerfile  README.md  analytics.py  db.py  manage.py  requirements.txt
analytics/analytics/: apps.py  calculations.py  models.py  serializers.py  urls.py  views.py
client/: .env.example  Dockerfile  craco.config.js  jsconfig.json
compose/: docker-compose-DH-DEV.yml  docker-compose-DH.yml  docker-compose-image.yml  docker-compose.yml  nginx.conf
docs/: architecture.md  er_diagram.md  evaluation_algorithm.md  linksBetweenDatabases.md  sequenceDiagrams.md  sequence_diagrams.md  use_case.md  user_instructions.md  user_manual.md
results/: manage.py
subjects/: INSTRUCTIONS.md  db.sqlite3  docker-compose.dev.yml  pyproject.toml
subjects/courses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
subjects/courses/migrations/: 0001_initial.py
subjects/docker/dev/: Dockerfile  entrypoint.sh
subjects/myproject/: settings.py  urls.py
subjects/project/: asgi.py  settings.py  urls.py  wsgi.py
subjects/unittests/: TestCourseView.py  TestSubjectView.py  TestThemeView.py
tests/: Dockerfile  manage.py  requirements.txt
tests/tests/: apps.py  (+6 more)
users/: Dockerfile  manage.py  requirements.txt  serializers.py  signals.py  views.py
(+187 files in other folders)
