[tool.poetry]
name = "subjects"
version = "0.1.0"
description = ""
authors = ["Vera Kalacheva <verkalacheva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"
python-decouple = "^3.8"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
